updated user creation wizzard

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -231,14 +231,13 @@
                     <h:outputText value="#{msgs.abbrechen}" />
                 </button>
             </div>
-
         </ui:fragment>
 
         <ui:fragment rendered="#{externalLoginBean.wizzardMode=='page2'}">
-Daten über abliefernde Institution oder Person
-
-
-        <div class="form-group">
+            <h2>
+                <h:outputText value="#{msgs.login_new_institution}" />
+            </h2>
+            <div class="form-group">
                 <h:outputLabel
                     for="institutionName"
                     value="#{msgs.login_new_account_institutionName}" />
@@ -267,8 +266,6 @@ Daten über abliefernde Institution oder Person
                 var="field"
                 value="#{externalLoginBean.additionalFields['page2']}">
 
-                <!--                 <h:outputText value="#{field.label}" /> -->
-
                 <div class="form-group">
                     <h:outputLabel value="#{field.label}" />
                     <i
@@ -279,19 +276,22 @@ Daten über abliefernde Institution oder Person
 
                     <div class="email controls">
                         <x:inputText
+                            rendered="#{field.fieldType=='input'}"
                             pt:aria-label="#{field.label}"
-                            forceId="true"
                             styleClass="form-control"
                             value="#{field.value}"
-                            required="true">
+                            required="#{field.required}">
+                            <f:ajax
+                                render="@this"
+                                execute="@this" />
                             <f:passThroughAttribute
                                 name="placeholder"
                                 value="#{field.label}" />
                         </x:inputText>
+
+
                     </div>
                 </div>
-
-
             </ui:repeat>
 
 
@@ -303,19 +303,86 @@ Daten über abliefernde Institution oder Person
 
 
         <ui:fragment rendered="#{externalLoginBean.wizzardMode=='page3'}">
-Kontaktperson
+            <h2>
+                <h:outputText value="#{msgs.login_new_contact}" />
+            </h2>
+            <ui:repeat
+                var="field"
+                value="#{externalLoginBean.additionalFields['page3']}">
 
-Funktion
-Titel
-Vorname*
-Nachname*
-E-Mail-Adresse*
-Vorwahl
-Rufnummer
-</ui:fragment>
+                <div class="form-group">
+                    <h:outputLabel value="#{field.label}" />
+                    <i
+                        jsf:rendered="#{field.required}"
+                        class="fa fa-asterisk pull-right font-asterisk"
+                        title="#{msgs.requiredField}"
+                        data-toggle="tooltip" />
+
+                    <div class="email controls">
+                        <x:inputText
+                            rendered="#{field.fieldType=='input'}"
+                            pt:aria-label="#{field.label}"
+                            styleClass="form-control"
+                            value="#{field.value}"
+                            required="#{field.required}">
+                            <f:ajax
+                                render="@this"
+                                execute="@this" />
+                            <f:passThroughAttribute
+                                name="placeholder"
+                                value="#{field.label}" />
+                        </x:inputText>
+
+                        <x:inputTextarea
+                            rendered="#{field.fieldType=='textarea'}"
+                            pt:aria-label="#{field.label}"
+                            styleClass="form-control"
+                            value="#{field.value}"
+                            required="#{field.required}">
+                            <f:ajax
+                                render="@this"
+                                execute="@this" />
+                            <f:passThroughAttribute
+                                name="placeholder"
+                                value="#{field.label}" />
+                        </x:inputTextarea>
+
+
+                        <h:selectOneMenu
+                            rendered="#{field.fieldType=='dropdown'}"
+                            styleClass="form-control"
+                            value="#{field.value}"
+                            pt:aria-label="#{field.label}">
+                            <f:selectItem
+                                itemValue="null"
+                                itemLabel="#{msgs.bitteAuswaehlen}" />
+                            <f:ajax
+                                render="@this"
+                                execute="@this" />
+                            <f:selectItems value="#{field.selectItemList}" />
+                        </h:selectOneMenu>
+
+                        <h:selectBooleanCheckbox 
+                            rendered="#{field.fieldType=='checkbox'}"
+                            pt:aria-label="#{field.label}"
+                            styleClass="form-control"
+                            value="#{field.booleanValue}">
+                            <f:ajax
+                                render="@this"
+                                execute="@this" />
+                        </h:selectBooleanCheckbox>
+                    </div>
+                </div>
+            </ui:repeat>
+
+
+        </ui:fragment>
 
         <ui:fragment rendered="#{externalLoginBean.wizzardMode=='page4'}">
-Weitere Informationen zur Ablieferung
+               <h2>
+                <h:outputText value="#{msgs.login_new_additionalData}" />
+            </h2>
+
 
 Zugriffs- und Nutzungsberechtigung: Ich möchte eine Zugriffs- und Nutzungsberechtigung als Standard-Einstellung für alle zukünftig abgelieferten Publikationen vergeben. 
 
@@ -330,12 +397,44 @@ Checkboxen-Feld
 
 </ui:fragment>
         <ui:fragment rendered="#{externalLoginBean.wizzardMode=='page5'}">
-Datenübersicht und Antrag auf Freischaltung
+                    <h2>
+                <h:outputText value="#{msgs.login_new_activation}" />
+            </h2>
+        
+        
 
 
 Freischaltung:* Hiermit beantrage ich die Freischaltung zur Ablieferung digitaler Pflichtpublikationen
 </ui:fragment>
 
+        <ui:fragment rendered="#{externalLoginBean.wizzardMode!='page1'}">
+            <div class="submit">
+                <button
+                    jsf:action="#{externalLoginBean.back}"
+                    jsf:id="goBack"
+                    class="float-left btn btn-primary font-size-s">
+                    <h:outputText value="#{msgs.back}" />
+                </button>
+
+                <button
+                    jsf:id="reloadConfig"
+                    jsf:action="#{externalLoginBean.reloadConfiguration}"
+                    style="margin-bottom: 20px;"
+                    class="btn btn-primary font-size-s">
+                    <h:outputText value="#{msgs.reloadConfiguration}" />
+                </button>
+
+                <button
+                    jsf:id="goNext"
+                    jsf:action="#{externalLoginBean.next}"
+                    style="margin-bottom: 20px;"
+                    class="btn btn-primary font-size-s pull-right">
+                    <h:outputText value="#{msgs.next}" />
+
+                </button>
+            </div>
+
+        </ui:fragment>
 
     </composite:implementation>
 
